fix/DTS-43882_Code_ReviewComments_SC